--- a/notes/package.json
+++ b/notes/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "concurrently": "^4.1.2",
+    "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
     "shortid": "^2.2.15"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start", 
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -28,5 +30,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "./public/index.html",
+  "devDependencies": {
+    "nodemon": "^1.19.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eDervishaj16/Notes.git"
+  },
+  "author": "Ergi Dervishaj",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/eDervishaj16/Notes/issues"
+  },
+  "homepage": "https://github.com/eDervishaj16/Notes#readme",
+  "proxy": "http://localhost:5000"
 }
