--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "shortid": "^2.2.15"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
