--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "config": "^3.2.3",
+    "core-util-is": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
