--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.2",
+    "config": "^3.2.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.3"
   },
